# PAMImage

./: CMakeLists.txt
include/PAMImage/: PAM.hpp  PGM.hpp  PPM.hpp
src/: PAM.cpp  PGM.cpp  PPM.cpp
tests/: main.cpp  out_binary.pgm  out_binary.ppm
